--- a/_posts/2020-04-07-week2-day1.md
+++ b/_posts/2020-04-07-week2-day1.md
@@ -12,5 +12,5 @@ category: biostat200Cspring2020
 
 ## Announcement
 
-* HW1 (logistic regression) is posted. Due Apr 
+* HW1 (logistic regression) is posted. Due Apr 17 @ 11:59pm.
 
