add overdispersion model and quasi-bionmial model

--- a/slides/03-binary/binary.Rmd
+++ b/slides/03-binary/binary.Rmd
@@ -262,7 +262,7 @@ or from profile-likelihood
 confint(lmod)
 ```
 
-## Diagnosis
+## Diagnostics
 
 - There are two kinds of fitted values (or predicted values). The first is on the scale of the linear predictor, $\eta$,
 ```{r}
