--- a/slides/04-binomial/binomial.Rmd
+++ b/slides/04-binomial/binomial.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Binomial Response (ELMR Chapter 3)"
 author: "Dr. Hua Zhou @ UCLA"
-date: "Apr 7, 2020"
+date: "Apr 9, 2020"
 output:
   # ioslides_presentation: default
   html_document:
@@ -59,7 +59,7 @@ orings %>%
 
 ## Binomial model
 
-- We model $Y_i$ as a Binomial random variable with batch size $m_i$ and ``success" probability $p_i$
+- We model $Y_i$ as a Binomial random variable with batch size $m_i$ and "success" probability $p_i$
 $$
 \mathbb{P}(Y_i = y_i) = \binom{m_i}{y_i} p_i^{y_i} (1 - p_i)^{m_i - y_i}.
 $$
@@ -87,13 +87,13 @@ $$
 For Binomial model, we input $(\text{successes}_i, \text{failures}_i)$ as responses.
 ```{r}
 library(gtsummary)
-lmod <- glm(cbind(damage, 6 - damage) ~ temp, family= binomial, data = orings)
+lmod <- glm(cbind(damage, 6 - damage) ~ temp, family = binomial, data = orings)
 lmod %>%
   tbl_regression() %>%
   bold_labels()
 ```
 
-Let's fit an equivalent Bernoulli model. We get identical estimate.
+Let's fit an equivalent (weighted) Bernoulli model. Not surprisingly, we get identical estimate.
 ```{r}
 obs_wt = c(rbind(orings$damage, 6 - orings$damage))
 orings %>%
@@ -107,7 +107,7 @@ orings %>%
 
 ## Goodness of fit
 
-- To evaluate the goodness of fit of model, we compare it to the full model with number of parameters equal to the number of observations. That is the full model estimate $p_i$ by $y_i/m_i$. Therefore the deviance is
+- To evaluate the goodness of fit of model, we compare it to the full model with number of parameters equal to the number of observations. That is the full/saturated model estimates $p_i$ by $y_i/m_i$. Therefore the deviance is
 \begin{eqnarray*}
   D &=& 2 \sum_i y_i \log(y_i/m_i) + (m_i - y_i) \log(1 - y_i / m_i) \\
   & & - 2 \sum_i y_i \log(\widehat{p}_i) + (m_i - y_i) \log(1 - \widehat{p}_i) \\
@@ -115,7 +115,7 @@ orings %>%
 \end{eqnarray*}
 where $\widehat{y}_i$ are the fitted values from the model.  
 
-- When $Y$ is truely binomial and $m_i$ are relatively large, the deviance $D$ is approximately $\chi^2$ distributed with $n - q - 1$ degrees of freedom if the model is correct. The large p-value indicates that the model is an adequate fit.
+- When $Y$ is truely binomial and $m_i$ are relatively large, the deviance $D$ is approximately $\chi^2$ distributed with $n - q - 1$ degrees of freedom if the model is correct. The large p-value indicates that the model has an adequate fit.
 ```{r}
 pchisq(lmod$deviance, lmod$df.residual, lower = FALSE)
 ```
@@ -125,10 +125,191 @@ pchisq(lmod$deviance, lmod$df.residual, lower = FALSE)
 anova(lmod, test = "Chi")
 ```
 
-## Pearson $\chi^2$
+## Pearson $X^2$
 
+- The **Pearson $X^2$ statistic** takes the form
+$$
+X^2 = \sum_i \frac{(O_i - E_i)^2}{E_i}.
+$$
+In the case of binomial model, we get
+\begin{eqnarray*}
+X^2 &=& \sum_i \frac{(y_i - n_i \widehat{p}_i)^2}{n_i \widehat{p}_i} + \frac{[(n_i - y_i) - n_i (1 - \widehat{p}_i)]^2}{n_i (1 - \widehat{p}_i)}  \\
+&=& \sum_i \frac{(y_i - n_i \widehat{p}_i)^2}{n_i \widehat{p}_i (1 - \widehat{p}_i)}.
+\end{eqnarray*}
+Comparing Pearson $X^2$ statistic to the asymptotic null distribution $\chi^2$ with degrees of freedom $n - q - 1$ gives a goodness of fit test.
+```{r}
+predprob <- predict(lmod, type = "response")
+# Pearson X2 statistic
+(px2 <- sum((orings$damage - 6 * predprob)^2 / (6 * predprob * (1 - predprob))))
+pchisq(px2, lmod$df.residual, lower.tail = FALSE)
+```
+This large p-value indicates that this model fits data well.
+
+- We can define the **Perason residuals** as
+$$
+r_i^{\text{P}} = \frac{y_i - n_i \widehat{p}_i}{\sqrt{\operatorname{var} \widehat{y}_i}}.
+$$
+Then
+$$
+X^2 = \sum_i \left(r_i^{\text{P}} \right)^2
+$$
+in analogy to $\text{RSS} = \sum_i r_i^2$ in linear regression.
+```{r}
+(presid <- residuals(lmod, type = "pearson"))
+```
+
+## Diagnostics
+
+- Plot deviance residuals against linear predictors to identify potential high residual observations.
+```{r}
+orings %>%
+  mutate(devres = residuals(lmod, type = "deviance"),
+         linpred = predict(lmod, type = "link")) %>%
+  ggplot + 
+  geom_point(mapping = aes(x = linpred, y = devres)) +
+  labs(x = "Linear predictor", y = "Deviance residual")
+```
+
+- Plot sorted hat values against half-normal quantiles to identify potential high leverage observations.
+```{r}
+halfnorm(hatvalues(lmod))
+orings %>%
+  slice(c(1, 2))
+```
+
+
+- Plot sorted Cook distances against the half-normal quantiles to identify potential high influential observations.
+```{r}
+halfnorm(cooks.distance(lmod))
+orings %>%
+  slice(c(1, 18))
+```
 
 ## Overdispersion
 
+- If we detect a lack of fit (unusual large deviance or Pearson $X^2$), we consider following causes.
+
+    1. Wrong systematic component. Most common explanation is we have the wrong structural form for the model. We have not included the right predictors or we have not transformed or combined them in the correct way.
+
+    2. Outliers. A few outliers with large deviance. If there are many, then we may have assumed the wrong error distribution for $Y$.
+
+    3. Sparse data. If binomial batch sizes are all small, then the $\chi^2$ approximation is bad. Rule of thumb for using the $\chi^2$ approximation is $n_i \ge 5$ for all batches.
+
+    4. Overdisperson or underdisperson. 
+
+- Binomial distribution arises when we assume that the trials in a batch are independent and share the same "success" probability.   
+
+    - Are the failures of those 6 O-rings in a space shuttle really independent of each other?  
+    
+    - Are the failure probability of those 6 O-rings in a space shuttle same?  
+    
+- Violation of the iid (identically and independently distributed) assumption of Bernoulli trials. (HW2: compare the variance of beta-binomial to that of binomial.)
+
+- We can relax the assumption of binomial distribution by allowing an **overdispersion parameter**
+$$
+\operatorname{Var} Y = \sigma^2 m p (1 - p).
+$$
+The dispersion parameter $\sigma^2$ can be estimated by
+$$
+\widehat{\sigma}^2 = \frac{X^2}{n - p},
+$$
+where $p$ is the number of parameters consumed by the logistic regression. Estimation of $\boldsymbol{\beta}$ is unchanged but the inference is changed
+$$
+\operatorname{Var} \widehat{\boldsymbol{\beta}} = \widehat{\sigma}^2 (\mathbf{X}^T \widehat{\mathbf{W}} \mathbf{X})^{-1}.
+$$
+- Analysis of deviance by differences in deviances cannot be used because now the test statistic is distributed as $\sigma^2 \chi^2$. Since $\sigma^2$ is estimated, we can use $F$ test by comparing
+$$
+F = \frac{(D_{\text{small}} - D_{\text{large}})/ (\text{df}_{\text{small}} - \text{df}_{\text{large}})}{\widehat{\sigma}^2}
+$$
+to the (asymptotic) F distribution with degrees of freedom $\text{df}_{\text{small}} - \text{df}_{\text{large}}$ and $n-p$.
+
+- The `troutegg` data set records the number of surviving eggs at 5 stream locations and retrieved at 4 different times.
+```{r}
+troutegg
+```
+We fit a binomial model for the two main effects.
+```{r}
+library(gtsummary)
+bmod <- glm(cbind(survive, total - survive) ~ location + period,
+            family = "binomial", data = troutegg)
+#bmod %>%
+#  tbl_regression(exponentiate = TRUE) %>%
+#  bold_labels()
+summary(bmod)
+```
+
+Analysis of deviance for the significance of two factors
+```{r}
+drop1(bmod, test = "Chisq")
+```
+
+- A deviance value of `r deviance(bmod)` on `r df.residual(bmod)` suggests a lack of fit. Diagnostics (not done here) does not reveal outliers. We estimate the dispersion parameter as
+```{r}
+(sigma2 <- sum(residuals(bmod, type = "pearson")^2) / 12)
+```
+which is substantially larger than 1. We can now see the scaled up standard errors
+```{r}
+summary(bmod, dispersion = sigma2)
+```
+and make F tests on predictors
+```{r}
+drop1(bmod, scale = sigma2, test = "F")
+```
+
 ## Quasi-binomial
 
+- Another way to deal with overdispersion or underdispsersion is **quasi-binomial** model.
+
+- Assume
+\begin{eqnarray*}
+\mathbb{E} (Y_i) = \mu_i, \quad \operatorname{Var}(Y_i) = \phi V(\mu_i).
+\end{eqnarray*}
+Define a score
+$$
+U_i = \frac{Y_i - \mu_i}{\phi V(\mu_i)},
+$$
+with
+\begin{eqnarray*}
+\mathbb{E}(U_i) &=& 0, \quad
+\operatorname{Var}(U_i) = \frac{1}{\phi V(\mu_i)} \\ - \mathbb{E} \frac{\partial U_i}{\partial \mu_i} &=& - \mathbb{E} \frac{- \phi V(\mu_i) - (Y_i - \mu_i) \phi V'(\mu_i)}{[\phi V(\mu_i)]^2} = \frac{1}{\phi V(\mu_i)}.
+\end{eqnarray*}
+
+- $U_i$ acts like the derivative of a log-likelihood. Thus we define
+$$
+Q_i = \int_{y_i}^{\mu_i} \frac{y_i - t}{\phi V(t)} \, dt
+$$
+and treat
+$$
+Q = \sum_{i=1}^n Q_i
+$$
+as a log **quasi-likelihood**.
+
+- The `mammalsleep` data records the sleep behavior of 62 mammals.
+```{r}
+modl <- glm(survive / total ~ location + period, 
+            family = "quasibinomial", data = troutegg)
+summary(modl)
+```
+Individual predictor significance is
+```{r}
+drop1(modl, test = "F")
+```
+We see similar p-values as the overdispersion model. 
+
+## Beta regression
+
+- We may also directly model the proportions as a beta distribution $\text{Beta}(\alpha, \beta)$ with density
+$$
+f(y \mid \alpha, \beta) = \frac{\Gamma(\alpha + \beta)}{\Gamma(\alpha) \Gamma(\beta)} y^{\alpha - 1}(1 - y)^{\beta - 1}.
+$$
+If $Y \sim \text{Beta}(\alpha, \beta)$, then
+$$
+\mathbb{E}(Y) = \mu = \frac{\alpha}{\alpha + \beta}, \quad \operatorname{Var}(Y) = \frac{\alpha \beta}{(\alpha + \beta)^2(1 + \alpha + \beta)}.
+$$
+Then we can link mean $\mu$ to the linear predictor $\eta$ using any link function for binomial model. 
+```{r}
+library(mgcv)
+modb <- gam(survive / total ~ location + period,
+            family = betar(), data = troutegg)
+summary(modb)
+```
